--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </head>
     <body>
         <img src="header_0fdd3fdf-3dcc-4466-8a28-4cbcc02a2c6e.jpg" alt="">
-        <img src="pac.jpg" alt="">
+        <img src="acustica_395abf3a-d46e-4f19-a9cc-ddee140e6597.jpg" alt="">
     </body>
 </html>
